--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap');
+
+body{
+    font-family: 'Poppins', sans-serif;
+}
+
 
 .carousel-caption{
-    top: 30%;
+    top: 30%; 
+}
+
+.carousel-item:before{
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #000;
+    opacity: .6;
 }
