--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap");
 
-body{
-    font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-
-.carousel-caption{
-    top: 30%; 
+.w-60 {
+  width: 60%;
 }
-.carousel-item:before{
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: #000;
-    opacity: .6;
+.carousel-caption {
+  top: 30%;
+}
+.carousel-item:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #000;
+  opacity: 0.6;
+}
+
+/***************************
+* ------ Responsive -------
+**************************/
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 1199.98px) {
+  .carousel-caption {
+    top: 20%;
+  }
+  .carousel-caption h1 {
+    font-size: 28px;
+  }
 }
